6-11-19
- check if debuggee is suspended based on suspend count instead of manually
flipping a flag
- making output nicer

6-5-19
- rewriting exception & mutex logic

6-4-19
- finished implementing new map-based argument system
- working on thread-specific breakpoints

6-3-19
- implementing new map-based argument system, will allow for freeform
arguments

6-2-19
- fix software breakpoint bug - setting two at the same spot would cause the
second one to pick up BRK #0 as the original instruction
- do away with using the pointer passed to realloc again
- fix (breakpoint|watchpoint)_delete regexes - allow more than one ID to be
given
- rewrite the way iosdbg figures out the debuggee's ASLR slide
- fix double free when attaching to something different while already attached
to something

5-31-19
- improvements for watchpoints, set up BAS and align DBGWVR<n>_EL1
correctly

5-29-19
- kill command while stopped at exception won't deadlock anymore
- concat does not use the pointer passed to realloc anymore
- no more jumbled error messages while settings breakpoints or watchpoints
- Ctrl-C and interrupt command send SIGSTOP instead of SIGINT now
- keep checking if ptrace sets errno to EBUSY to make sure we detach properly
- gather & reply to pending exceptions upon detach

5-27-19
- hardware breakpoints/watchpoints work on multithreaded programs
- much more reliable exception handling, guarded by locks instead of being
racy
- Ctrl-C sends SIGINT to debuggee instead of just suspending it now, same with
cmdfunc_interrupt
- iosdbg prompt shouldn't duplicate anymore
- return CMD_QUIT in cmdfunc_quit instead of exit(0)

5-21-19
- can use hex in count argument for memory find

5-13-19
- simulate user commands when needed
- add 'interrupt' command

5-12-19
- asprintf --> concat
- fixed up memutils.c
- parse_args --> parse_and_create_args

5-11-19
- fixing more memory leaks
- put command line processing in its own file, preparing for user-defined
commands

5-9-19