@@ -18,28 +18,20 @@
 #include "strext.h"
 #include "trace.h"
 
-#include "cmd/cmd.h"
-#include "cmd/misccmd.h"
-
-#include "handlers.h"
 static void *exception_server(void *arg){
-    pthread_setname_np("exception thread");
+    pthread_setname_np("exception handling thread");
 
     struct req {
         mach_msg_header_t hdr;
         char data[256];
     };
 
-    NUM_EXCEPTIONS = 0;
-    AUTO_RESUME = 1;
+    int num_exceptions = 0, will_auto_resume = 1;
 
     while(MACH_PORT_VALID(debuggee->exception_port)){ 
-        // pthread_testcancel
-        //struct req req;
-        //memset(&req, 0, sizeof(req));
         struct req *req = malloc(sizeof(struct req));
         
-        kern_return_t err = mach_msg(&(req->hdr),//&req.hdr,
+        mach_msg(&(req->hdr),
                 MACH_RCV_MSG,
                 0,
                 sizeof(struct req),
@@ -50,22 +42,18 @@ static void *exception_server(void *arg){
         /* We got something, suspend debuggee execution. */
         debuggee->suspend();
 
-        //Request *request = (Request *)&req;
         Request *request = (Request *)req;
-        //printf("%s: request %p err %s\n",
-          //      __func__, request, mach_error_string(err));
         enqueue(debuggee->exc_requests, request);
 
-        NUM_EXCEPTIONS++;
+        num_exceptions++;
 
-        err = KERN_SUCCESS;
+        kern_return_t err = KERN_SUCCESS;
 
         /* Gather up any more exceptions. */
         while(err != MACH_RCV_TIMED_OUT){
-            //struct req req2;
-            struct req *req2 = malloc(sizeof(struct req));
-            //memset(&req2, 0, sizeof(req2));
-            err = mach_msg(&(req2->hdr),//&req2.hdr,
+            req = malloc(sizeof(struct req));
+            
+            err = mach_msg(&(req->hdr),
                     MACH_RCV_MSG | MACH_RCV_TIMEOUT,
                     0,
                     sizeof(struct req),
@@ -73,23 +61,22 @@ static void *exception_server(void *arg){
                     0,
                     MACH_PORT_NULL);
 
-            //Request *request = (Request *)&req2;
-            Request *request = (Request *)req2;
-            //printf("%s: in loop: request %p err %s\n",
-              //      __func__, request, mach_error_string(err));
+            Request *request = (Request *)req;
 
             if(request && err == KERN_SUCCESS){
                 enqueue(debuggee->exc_requests, request);
-                NUM_EXCEPTIONS++;
+                num_exceptions++;
             }
         }
 
-        AUTO_RESUME = 1;
+        /* Assume we need to automatically resume after this exception.
+         * If this flag is set to 0, it will never be set to 1 again.
+         */
+        will_auto_resume = 1;
 
         /* Display and reply to what we gathered. */
-        while(NUM_EXCEPTIONS > 0){
+        while(num_exceptions > 0){
             Request *r = dequeue(debuggee->exc_requests);
-            //printf("%s: dequeueing exception %p\n", __func__, r);
 
             int should_auto_resume = 1, should_print = 1;
             char *what = NULL;
@@ -99,26 +86,22 @@ static void *exception_server(void *arg){
                     &should_print,
                     &what);
 
-            if(AUTO_RESUME && !should_auto_resume)
-                AUTO_RESUME = 0;
+            if(will_auto_resume && !should_auto_resume)
+                will_auto_resume = 0;
 
-            if(should_print){
+            if(should_print)
                 WriteExceptionBuffer("%s", what);
-                free(what);
-            }
+
+            free(what);
 
             reply_to_exception(r, KERN_SUCCESS);
 
             free(r);
 
-            NUM_EXCEPTIONS--;
+            num_exceptions--;
         }
-/*
-        printf("%s: auto resume %d, anything more? %p\n", __func__, AUTO_RESUME,
-            queue_peek(debuggee->exc_requests));
-        printf("%s: debuggee suspend count %d\n", __func__, sus_count());
-*/
-        if(AUTO_RESUME)
+
+        if(will_auto_resume)
             debuggee->resume();
 
         PrintExceptionBuffer();
@@ -132,79 +115,65 @@ static void *death_server(void *arg){
 
     int kqid = *(int *)arg;
 
-    while(1){
-        struct kevent death_event;
+    struct kevent death_event;
 
-        /* Provide a struct for the kernel to write to if any changes occur. */
-        int changes = kevent(kqid, NULL, 0, &death_event, 1, NULL);
+    /* Provide a struct for the kernel to write to if any changes occur. */
+    int changes = kevent(kqid, NULL, 0, &death_event, 1, NULL);
 
-        /* Don't report if we detached earlier. */
-        if(debuggee->pid == -1){
-            free(arg);
-            pthread_exit(NULL);
-        }
-
-        if(changes < 0){
-            printf("kevent: %s\n", strerror(errno));
-            free(arg);
-            pthread_exit(NULL);
-        }
-
-        wait_for_trace();
-
-        /* Figure out how the debuggee exited. */
-        int status;
-        waitpid(debuggee->pid, &status, 0);
-
-        char *error = NULL;
-
-        if(WIFEXITED(status)){
-            int wexitstatus = WEXITSTATUS(status);
-            printf("\n[%s (%d) exited normally (status = 0x%8.8x)]\n", 
-                    debuggee->debuggee_name, debuggee->pid, wexitstatus);
-
-            char *wexitstatusstr = NULL;
-            concat(&wexitstatusstr, "%#x", wexitstatus);
-
-            void_convvar("$_exitsignal");
-            set_convvar("$_exitcode", wexitstatusstr, &error);
-
-            desc_auto_convvar_error_if_needed("$_exitcode", error);
-
-            free(wexitstatusstr);
-        }
-        else if(WIFSIGNALED(status)){
-            int wtermsig = WTERMSIG(status);
-            printf("\n[%s (%d) terminated due to signal %d]\n", 
-                    debuggee->debuggee_name, debuggee->pid, wtermsig);
-
-            char *wtermsigstr = NULL;
-            concat(&wtermsigstr, "%#x", wtermsig);
-
-            void_convvar("$_exitcode");
-            set_convvar("$_exitsignal", wtermsigstr, &error);
-
-            desc_auto_convvar_error_if_needed("$_exitsignal", error);
-
-            free(wtermsigstr);
-        }
-
+    /* Don't report if we detached earlier. */
+    if(debuggee->pid == -1 || changes < 0){
         free(arg);
-
-        pthread_mutex_lock(&DEATH_SERVER_DETACHED_MUTEX);
-
-        ops_detach(1);
-
-        pthread_cond_signal(&DEATH_SERVER_DETACHED_COND);
-        pthread_mutex_unlock(&DEATH_SERVER_DETACHED_MUTEX);
-
-        if(error)
-            free(error);
-
-        close(kqid);
-        safe_reprompt();
         pthread_exit(NULL);
     }
+
+    wait_for_trace();
+
+    /* Figure out how the debuggee exited. */
+    int status;
+    waitpid(debuggee->pid, &status, 0);
+
+    char *error = NULL;
+
+    if(WIFEXITED(status)){
+        int wexitstatus = WEXITSTATUS(status);
+        WriteExceptionBuffer("\n[%s (%d) exited normally (status = 0x%8.8x)]\n", 
+                debuggee->debuggee_name, debuggee->pid, wexitstatus);
+
+        char *wexitstatusstr = NULL;
+        concat(&wexitstatusstr, "%#x", wexitstatus);
+
+        void_convvar("$_exitsignal");
+        set_convvar("$_exitcode", wexitstatusstr, &error);
+
+        desc_auto_convvar_error_if_needed("$_exitcode", error);
+
+        free(wexitstatusstr);
+    }
+    else if(WIFSIGNALED(status)){
+        int wtermsig = WTERMSIG(status);
+        WriteExceptionBuffer("\n[%s (%d) terminated due to signal %d]\n", 
+                debuggee->debuggee_name, debuggee->pid, wtermsig);
+
+        char *wtermsigstr = NULL;
+        concat(&wtermsigstr, "%#x", wtermsig);
+
+        void_convvar("$_exitcode");
+        set_convvar("$_exitsignal", wtermsigstr, &error);
+
+        desc_auto_convvar_error_if_needed("$_exitsignal", error);
+
+        free(wtermsigstr);
+    }
+
+    free(arg);
+    ops_detach(1);
+
+    PrintExceptionBuffer();
+
+    if(error)
+        free(error);
+
+    close(kqid);
 
     return NULL;
 }
