@@ -1,3 +1,9 @@
+6-12-19
+- detach before we send the kill signal for the kill command
+- don't use the same space on the stack for multiple exceptions, exception
+handling is almost rock solid now
+- each thread has its own last_hit_wp_loc and last_hit_wp_PC
+
 6-11-19
 - check if debuggee is suspended based on suspend count instead of manually
 flipping a flag
